css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Comic Relief', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue",
        "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei",
        Arial, sans-serif;
}

/* 修改后的样式 */
html,
body {
    height: 100%;
    width: 100%;
    margin: 0;
        padding: 0;
        overflow-x: hidden;
        /* 关键：禁止水平方向的滚动条 */
}

/* flex容器 */
#container {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    overflow: hidden;
}

/* header顶栏 */
header {
    position: relative;
    display: flex;
    height: 72px;
    padding-top: 9px;
    align-items: flex-start;
    justify-content: space-between;

    z-index: 10;
    background-color: transparent;
    -webkit-backdrop-filter: blur(10px);
    backdrop-filter: blur(10px);
    -webkit-mask: linear-gradient(0deg, transparent, black 40%);
    mask: linear-gradient(0deg, transparent, black 40%);
}

.header-logo {
    display: flex;
    align-items: center;
    gap: 16px;
}

.header-logo svg {
    margin-left: 24px;
    width: 36px;
}

.header-logo span {
    font-family: 'Comic Relief';
    font-size: 24px;
    font-weight: bold;
}

.setting-btn {
    margin-right: 24px;
    right: 0;
    cursor: pointer;
    background: none;
    border: none;
    display: flex;
}

.setting-btn svg {
    width: 30px;
}

/* main主要部分 */
.main {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 12px;
    /* height: 30%; */
}

#search-bar {
    gap: 10px;
    display: flex;
    align-items: center;
    /* justify-content: space-between; */
    height: 50px;
    /* max-width: ; */
    width: 60vw;
    background-color: white;
    border: 1px solid rgb(171, 171, 171);
    border-radius: 25px;
    box-shadow: 0px 3px 10px 0px rgba(31, 31, 31, 0.08);
}

#search-bar:hover {
    box-shadow: 0 2px 8px 1px rgba(64, 60, 67, .24);
}

.search-input-wrapper {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#search-input {
    width: 100%;
    height: 100%;
    border: none;
    background: none;
    font-size: 16px;
    color: black;
}

#search-input::-webkit-search-cancel-button {
    -webkit-appearance: none;
    display: none;
}

#search-input:focus-visible {
    outline: none;
}

#search-bar:has(#search-input:focus-visible) {
    box-shadow: 0 2px 8px 1px rgba(64, 60, 67, .24);
}

.clear-btn {
    display: none;
    height: 18px;
    width: 18px;

    background: none;
    border: none;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}

#search-input:not(:placeholder-shown):focus+.clear-btn {
    display: flex;
}

.search-input-wrapper:hover input:not(:placeholder-shown)+.clear-btn {
    display: flex;
}

.engine-btn {
    height: 100%;
    padding-left: 20px;
    padding-right: 20px;
    background: none;
    border: 1px solid transparent;
    border-radius: inherit;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}

.engine-btn svg {
    width: 24px;
    height: 24px;
}

.search-btn {
    padding-left: 20px;
    padding-right: 20px;
    height: 100%;
    background: none;
    border-radius: inherit;
    /*lt rt rb lb*/
    border: 1px solid transparent;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}

.search-btn:hover,
.engine-btn:hover {
    background-color: rgba(0, 0, 0, 0.1);
}

.search-btn svg {
    width: 24px;
    height: 24px;
}

/* 搜索引擎grid */
.search-engine-collection {
    max-width: 792px;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
    /* grid-template-rows: auto auto auto; */
    row-gap: 16px;
    column-gap: 16px;
    justify-content: center;
    align-items: center;
    overflow-y: scroll;
    max-height: 160px;
    padding: 10px 10px 10px 10px;
    border-radius: 6px;
    background-color: rgba(88, 88, 88, 0.2);
    -webkit-backdrop-filter: blur(10px);
    backdrop-filter: blur(10px);
    ;
}

/* 对 .scrollable-area 的滚动条进行美化 */
.scrollable-area::-webkit-scrollbar {
    width: 8px;
    /* 滚动条宽度 */
}

.scrollable-area::-webkit-scrollbar-track {
    /* background: #f1f1f1; */
    /* 轨道背景色 */
}

.scrollable-area::-webkit-scrollbar-thumb {
    background: #00000068;
    /* 滑块颜色 */
    border-radius: 6px;
    /* 滑块圆角 */
}

.scrollable-area::-webkit-scrollbar-thumb:hover {
    background: #000000a8;
    /* 鼠标悬停时滑块颜色 */
}

.engine-item {
    cursor: pointer;
    display: flex;
    gap: 5px;
    justify-content: center;
    align-items: center;
    width: 140px;
    height: 36px;
    border-radius: 6px;
    background-color: #00000040;
    -webkit-backdrop-filter: blur(10px);
    backdrop-filter: blur(10px);
}

.engine-item:hover,
.engine-item.active {
    background-color: #ffffffbb;
}

.engine-icon {
    border: 1px solid transparent;
    border-radius: 7px;
    background-color: white;
    padding: 2px;
    width: 28px;

}


/* footer底栏 */
footer {
    height: 50px;
    position: relative;
    /* padding-top: 10px; */
    display: flex;
    align-items: flex-end;
    padding-bottom: 5px;
    justify-content: center;
    background-color: transparent;
    -webkit-backdrop-filter: blur(10px);
    backdrop-filter: blur(10px);
    -webkit-mask: linear-gradient(transparent, black 60%);
    mask: linear-gradient(transparent, black 60%);
}

footer a {
    color: inherit;
    /* text-decoration: none; */
}



.theme-switcher {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 40px;
    z-index: 10;
    background-color: transparent;
    /* 毛玻璃效果 */
    /* background-color: linear-gradient(0deg, rgba(255, 255, 255, 0.664), rgba(255, 255, 255, 0.1)); */
    /* 需要一个半透明的背景色 */
    -webkit-backdrop-filter: blur(10px);
    /* 兼容 Safari */
    backdrop-filter: blur(10px);
    /* 对背景内容进行模糊处理 */

    /* border-bottom: 1px solid rgba(255, 255, 255, 0.2); */
    /* (可选) 加一条细线分割 */
}

/* .theme-button {} */

.is-hidden {
    display: none;
}

.no-select {
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
}

